--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,64 @@ header .nav a:hover{
   font-size: 25px;
   transition: .2s linear;
 }
+
+.home{
+  min-height: 100vh;
+  background: url(../images/home-bg.png) no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.home .content span{
+  color:var(--main-color);
+  font-size: 20px;
+}
+
+.home .content h3{
+  color:var(--black);
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+
+
+
+
+
+/* telefon  */
+
+@media (max-width:991px){
+
+  .home .content h3{
+      font-size: 30px;
+  }
+
+}
+
+@media (max-width:768px){
+
+  header .nav{
+      position: absolute;
+      top:100%; left: 0; right: 0;
+      background: #fff;
+      border-top: 1px solid rgba(0,0,0,.1);
+      border-bottom: 1px solid rgba(0,0,0,.1);
+      transition: .2s linear;
+      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+
+  header .nav.active{
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+
+  header .nav a{
+      display: block;
+      width: 100%;
+      margin:10px;
+  }
+
+  .fa-times{
+      transform: rotate(180deg);
+  }
+
+}
