--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,56 @@ header .nav a:hover{
   height: 100%;
   width:100%;
 }
+.blogs .box{
+  width: 350px;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+  background:#fff;
+}
 
+.blogs .box .image{
+  height: 200px;
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  background:#f8f8fe;
+}
+
+.blogs .box .image img{
+  transition: .2s linear;
+}
+
+.blogs .box:hover .image img{
+  transform: scale(1.1);
+}
+
+.blogs .box .content h3{
+  padding:5px 0;
+  font-size: 20px;
+  color:var(--black);
+}
+
+.blogs .box .content .icons{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid rgba(0,0,0,.1);
+}
+
+.blogs .box .content .icons a{
+  color:#777;
+  font-size: 13px;
+}
+
+.blogs .box .content .icons a i{
+  padding-right: 7px;
+}
+
+
+.blogs .box .content .icons a:hover{
+  color:var(--main-color);
+}
 
 
 
