--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,65 @@ header .nav a:hover{
 .blogs .box .content .icons a:hover{
   color:var(--main-color);
 }
+.footer .box{
+  flex:1 1 250px;
+}
+
+.footer .box h3{
+  font-size: 20px;
+  color:var(--black);
+}
+
+.footer .box a{
+  display: block;
+  font-size: 14px;
+  color:#777;
+  padding:5px 0;
+}
+
+.footer .box a:hover{
+  color:var(--main-color);
+}
+
+.footer .credit{
+  text-align: center;
+  color:var(--black);
+  border-top: 1px solid rgba(0,0,0,.1);
+  margin-top: 10px;
+  padding-top: 20px;
+}
+
+.footer .credit span{
+  color:var(--main-color);
+}
+
+ul.breadcrumb {
+  padding: 5px 5px;
+  list-style: none;
+  background-color:#fff;
+}
+
+ul.breadcrumb li {
+  display: inline;
+  font-size: 15px;
+  color: orange;
+}
+
+ul.breadcrumb li + li:before {
+  padding: 4px;
+  color: orange;
+  content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+  color: orange;
+  text-decoration: none;
+}
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
 
 
 
